doc/firewall/iptables-examples/docker-iptables-S.txt
root@imi-map-production:~# iptables -S
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-N DOCKER
-N DOCKER-ISOLATION
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o br-db5a2ecc67dd -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-db5a2ecc67dd -j DOCKER
-A FORWARD -i br-db5a2ecc67dd ! -o br-db5a2ecc67dd -j ACCEPT
-A FORWARD -i br-db5a2ecc67dd -o br-db5a2ecc67dd -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-db5a2ecc67dd -o br-db5a2ecc67dd -p tcp -m tcp --dport 5432 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i br-db5a2ecc67dd -o br-db5a2ecc67dd -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER-ISOLATION -i docker0 -o br-db5a2ecc67dd -j DROP
-A DOCKER-ISOLATION -i br-db5a2ecc67dd -o docker0 -j DROP
